Simple placeholder message

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>AJ Schrier</title>
+</head>
+<body bgcolor="#3573cc">
+<font face="Helvetica Neue" color="white">
+<h1><center>AJ Schrier</h1>
+<p><center>This site is a work in progress.</p></font>
+</body>
+</html>
