--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>AJ Schrier</title>
 </head>
-<body bgcolor="#3573cc">
-<font face="Helvetica Neue" color="white">
-<h1><center>AJ Schrier</h1>
-<p><center>This site is a work in progress.</p></font>
+<body>
+<h1>AJ Schrier</h1>
+<p>This site is a work in progress.</p>
 </body>
 </html>
