--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>AJ Schrier</title>
 </head>
 <body>
-<h1>AJ Schrier</h1>
+
+<div><h1>AJ Schrier</h1>
 <p>This site is a work in progress.</p>
+<P>Check out <a href="facebook.com/ajschrier">Facebook</a> , <a href="twitter.com/ajschrier">Twitter</a> , <a href="instagram.com/ajschrier"> Instagram</a>, <a href="">LinkedIn</a>, or <a href="github.com/ajschrier">GitHub</a> for more.</P></div>
+
 </body>
 </html>
