--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div><h1>AJ Schrier</h1>
 <p>This site is a work in progress.</p>
-<P>Check out <a href="facebook.com/ajschrier">Facebook</a> , <a href="twitter.com/ajschrier">Twitter</a> , <a href="instagram.com/ajschrier"> Instagram</a>, <a href="">LinkedIn</a>, or <a href="github.com/ajschrier">GitHub</a> for more.</P></div>
+<P>Check out <a href="http://facebook.com/ajschrier">Facebook</a> , <a href="http://twitter.com/ajschrier">Twitter</a> , <a href="http://instagram.com/ajschrier"> Instagram</a>, <a href="http://linkedin.com/ajschrier">LinkedIn</a>, or <a href="http://github.com/ajschrier">GitHub</a> for more.</P></div>
 
 </body>
 </html>
